# dockersmart

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: analyze.yml  main.yml  pr_check.yml  pypi.yml  release.yml  tag.yml
dockersmart/: main.py
dockersmart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dockersmart/clean/: clean.py
dockersmart/cli/: commands.py
dockersmart/configurators/: base_configurator.py  dev_configurator.py  prod_configurator.py
dockersmart/detectors/: aggregator.py  database_detector.py  server_detector.py  system_dependency_detector.py
dockersmart/doctor/: doctor.py
dockersmart/generators/: compose_generator.py  dockerfile_generator.py  dockerignore_generator.py  env_generator.py
dockersmart/help/: help.py
dockersmart/inspectors/: aggregator.py  dependency_inspector.py  runtime_inspector.py  service_inspector.py  structure_inspector.py
dockersmart/models/: detection_result.py  docker_configuration.py  inspection_result.py
dockersmart/templates/compose/: dev.j2  prod.j2
dockersmart/templates/dockerfile/: dev.j2  prod.j2
dockersmart/templates/dockerignore/: default.j2
dockersmart/utils/: constants.py  file_finder.py  file_reader.py
dockersmart/validate/: validate.py
dockersmart/version/: version.py
