[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dockersmart"
version = "0.1.0"
description = "AI-powered Docker generator for Django projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "rich"
]

authors = [
    { name = "Ephraim Gode" }
]


[project.scripts]
dockersmart = "dockersmart.cli.commands:main"